force-app/main/default/objects/Revenue_Center__c/Revenue_Center__c.object-meta.xml
<CustomObject>
    <label>Revenue Center</label>
    <nameField>
        <label>Revenue Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>