force-app/main/default/objects/Revenue_Center__c/fields/FIN_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>FIN_GL_Code__c</fullName>
    <label>GL Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>