force-app/main/default/objects/Revenue_Center__c/fields/Revenue_Center_Description__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Center_Description__c</fullName>
    <label>Revenue Center Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>