force-app/main/default/objects/Revenue_Center__c/fields/Unique_Revenue_Center_Desc__c.field-meta.xml
<CustomField>
    <fullName>Unique_Revenue_Center_Desc__c</fullName>
    <externalId>true</externalId>
    <label>Unique Revenue Center Desc</label>
    <length>250</length>
    <type>Text</type>
</CustomField>