force-app/main/default/objects/Revenue_Center__c/recordTypes/FIN_SWE_Revenue_Center.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Revenue_Center</fullName>
    <active>true</active>
    <label>SWE Revenue Center</label>
</RecordType>