force-app/main/default/objects/Revenue_Center__c/recordTypes/FIN_UK_Revenue_Center.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Revenue_Center</fullName>
    <active>true</active>
    <label>UK Revenue Center</label>
</RecordType>