force-app/main/default/objects/Revenue_Center__c/recordTypes/FIN_US_Revenue_Center.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Revenue_Center</fullName>
    <active>true</active>
    <label>US Revenue Center</label>
</RecordType>